[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/star-white.png" type="Texture" id=2]
[ext_resource path="res://Assets/Particles/Stars_Small.tres" type="Material" id=3]

[sub_resource type="CanvasItemMaterial" id=19]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="OccluderPolygon2D" id=10]
cull_mode = 1
polygon = PoolVector2Array( -45, -65, -45, 65, 45, 65, 45, -65 )

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.898039, 0.905882, 0.921569, 1 )
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 12
shadow_color = Color( 0, 0, 0, 0.0588235 )
shadow_size = 2
shadow_offset = Vector2( 3, 1 )
anti_aliasing_size = 1.0

[sub_resource type="StyleBoxFlat" id=11]
resource_local_to_scene = true
bg_color = Color( 0.898039, 0.905882, 0.921569, 1 )
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 12
anti_aliasing_size = 1.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/Montserrat-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 50
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 17
use_mipmaps = true
use_filter = true
extra_spacing_char = -1
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.662745, 0.133333, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10
anti_aliasing_size = 1.0

[sub_resource type="Animation" id=6]
resource_name = "Flip"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27, 0.33, 0.66, 1.2, 1.5 ),
"transitions": PoolRealArray( 0.267943, 0.466516, 3.4822, 0.267943, 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1.25, 1.25 ), Vector2( 0.05, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.65, 0.67, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sheet:custom_styles/panel:shadow_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.29, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.0588235 ), Color( 0, 0, 0, 0.0980392 ), Color( 0, 0, 0, 0.0980392 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sheet:custom_styles/panel:shadow_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.55, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 8, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sheet:custom_styles/panel:shadow_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.55, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 1 ), Vector2( -4, 1 ), Vector2( -4, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "FlipInPlace"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27, 0.33, 0.6, 0.67, 0.75, 1.2, 1.5 ),
"transitions": PoolRealArray( 0.267943, 0.466516, 3.4822, 0.267943, 1, 0.267943, 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1.25, 1.25 ), Vector2( 0.05, 1 ), Vector2( 0.75, 1 ), Vector2( 0.05, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.57, 0.6, 0.73, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true, false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sheet:custom_styles/panel:shadow_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.29, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.0588235 ), Color( 0, 0, 0, 0.0980392 ), Color( 0, 0, 0, 0.0980392 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sheet:custom_styles/panel:shadow_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.55, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 8, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sheet:custom_styles/panel:shadow_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.55, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 1 ), Vector2( -4, 1 ), Vector2( -4, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Move"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.27, 0.33, 0.66, 1.5 ),
"transitions": PoolRealArray( 0.267943, 0.466516, 3.4822, 0.267943, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sheet:custom_styles/panel:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.29, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.0588235 ), Color( 0, 0, 0, 0.0980392 ), Color( 0, 0, 0, 0.0980392 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sheet:custom_styles/panel:shadow_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.55, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 8, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sheet:custom_styles/panel:shadow_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.55, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 1 ), Vector2( -4, 1 ), Vector2( -4, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sheet:custom_styles/panel:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.0588235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sheet:custom_styles/panel:shadow_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sheet:custom_styles/panel:shadow_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "RESET (Flipped)"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sheet:custom_styles/panel:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.0588235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sheet:custom_styles/panel:shadow_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sheet:custom_styles/panel:shadow_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 1 ) ]
}

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="StarParticles" type="Particles2D" parent="."]
material = SubResource( 19 )
emitting = false
amount = 3
lifetime = 0.75
one_shot = true
explosiveness = 0.5
randomness = 0.5
process_material = ExtResource( 3 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 10 )

[node name="Sheet" type="Panel" parent="."]
light_mask = 2
anchor_right = 125.0
anchor_bottom = 175.0
margin_left = -50.0
margin_top = -70.0
margin_right = 50.0
margin_bottom = 70.0
rect_scale = Vector2( 1.00079, 1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SheetLighting" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
light_mask = 3
anchor_right = 125.0
anchor_bottom = 175.0
margin_left = -50.0
margin_top = -70.0
margin_right = 50.0
margin_bottom = 70.0
rect_scale = Vector2( 1.00079, 1 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Label" parent="."]
margin_left = -40.0
margin_top = -70.0
margin_right = -10.0
margin_bottom = -8.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_Bottom" type="Label" parent="."]
margin_left = 40.0
margin_top = 70.0
margin_right = 70.0
margin_bottom = 132.0
rect_rotation = 180.0
rect_scale = Vector2( 0.99638, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Suit" type="Label" parent="."]
margin_left = -65.0
margin_top = -10.0
margin_right = 65.0
margin_bottom = 12.0
rect_scale = Vector2( 1, 1.00341 )
rect_clip_content = true
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "diamonds"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Panel" parent="."]
margin_left = -45.0
margin_top = -65.0
margin_right = 45.0
margin_bottom = 65.0
rect_scale = Vector2( 0.997736, 0.997244 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flip = SubResource( 6 )
anims/FlipInPlace = SubResource( 20 )
anims/Move = SubResource( 13 )
anims/RESET = SubResource( 9 )
"anims/RESET (Flipped)" = SubResource( 12 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]
